/* Verb */ rfv one sense; add another <play#5495354>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -144,7 +144,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 #*: We had to play <!--[drums]--> for an hour, so that meant that we didn't have time to '''play''' and joke around.
 # {{intransitive}} To produce music using a musical instrument.
 #: ''I've practiced the piano off and on, and I still can't '''play''' very well.''
-# {{intransitive}} To deal with a situation in a diplomatic manner.
+# {{rfv-sense}} {{intransitive}} To deal with a situation in a diplomatic manner.
 # {{transitive}} To act in a performance as the indicated role.
 #: ''He '''plays''' the King, and she's the Queen.''
 # {{transitive}} To participate in the game indicated.
@@ -162,6 +162,11 @@ Old English ''[[pleġa]]'', ''plæġa''
 #: ''My son thinks he can '''play''' music.''
 # {{transitive|ergative}} To use a device to watch or listen to the indicated recording.
 #: ''You can '''play''' the DVD now.''
+# To act [[disingenuous]]ly in a particular manner.
+#*'''1985''', Sharon S Brehm, ''Intimate Relationships''
+#:'''Playing''' hard to get is not the same as slamming the door in someone's face.
+#*'''1996''', Michael P Malone, ''James J Hill: Empire Builder of the Northwest''
+#:Now, surveying his final link, he had the nice advantage of being able to '''play''' coy with established port cities that desperately wanted his proven railroad.
 
 =====Translations=====
 {{trans-top|act in a manner such that one has fun}}
