--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -163,9 +163,11 @@ Old English ''[[pleġa]]'', ''plæġa''
 #: ''You can '''play''' the DVD now.''
 # To act [[disingenuous]]ly in a particular manner.
 #*'''1985''', Sharon S Brehm, ''Intimate Relationships''
-#:'''Playing''' hard to get is not the same as slamming the door in someone's face.
+#*:'''Playing''' hard to get is not the same as slamming the door in someone's face.
 #*'''1996''', Michael P Malone, ''James J Hill: Empire Builder of the Northwest''
-#:Now, surveying his final link, he had the nice advantage of being able to '''play''' coy with established port cities that desperately wanted his proven railroad.
+#*:Now, surveying his final link, he had the nice advantage of being able to '''play''' coy with established port cities that desperately wanted his proven railroad.
+#*'''2003''', John U. Ogbu, '''Black American Students in an Affluent Suburb: A Study of Academic Disengagement''', page 194
+#*:Instead, they '''played''' dumb, remained silent, and did their classwork.
 
 =====Translations=====
 {{trans-top|act in a manner such that one has fun}}
