/* Verb */ fmt <play#5495481>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -140,7 +140,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 #* '''2001''', Annabelle Sabloff, ''Reordering the Natural World'', Univ. of Toronto Press, p. 83,
 #*: A youngster''...''listed some of the things his pet did not do<!--''...''-->: ''...''go on vacation, '''play''' in the same way that he did with his friends, and so on.
 #* '''2003''', Anne-Nelly Perret-Clermont et al. (eds.), ''Joining Society: Social Interaction and Learning in Adolescence and Youth'', Cambridge Univ. Press, p. 52,
-#: ''We had to play <!--[drums]--> for an hour, so that meant that we didn't have time to '''play''' and joke around.''
+#*: We had to play <!--[drums]--> for an hour, so that meant that we didn't have time to '''play''' and joke around.
 # {{intransitive}} To play a sport.
 #:''He '''plays''' on three teams.''
 #:''Who's '''playing''' now?''
