--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -31,6 +31,7 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 * Dutch: [[icoon]] {{n}}
 * Finnish: {{t-|fi|ikoni}}, {{t+|fi|symboli}}
 * French: {{t+|fr|icône|f}}
+* German: {{t+|de|Bild|n}}
 * Greek: [[εικόνα]] [iˈko̞na] {{f}}, [[απεικόνιση]] [apiˈko̞niˌsi] {{f}}, [[παράσταση]] [paˈrastaˌsi] {{f}}, [[αναπαράσταση]] [anapaˈrastaˌsi] {{f}}, [[ομοίωμα]] [o̞ˈmio̞ˌma] {{n}}, [[είδωλο]] [ˈiðo̞ˌlo̞] {{n}}, [[απείκασμα]] [aˈpikaˌzma] {{n}}, [[απεικόνισμα]] [apiˈko̞niˌzma] {{n}}
 {{trans-mid}}
 * Italian: {{t+|it|icona|f}}
@@ -46,6 +47,7 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 * Czech: {{t-|cs|ikona|f}}
 * Dutch: [[icoon]] {{n}}
 * Finnish: {{t-|fi|ikoni}}
+* German: {{t+|de|Ikone|f}}
 * Greek: [[εικόνα]] [iˈko̞na] {{f}}, [[εικόνισμα]] [iˈko̞niˌzma] {{n}}
 * Italian: {{t+|it|icona|f}}
 {{trans-mid}}
@@ -61,6 +63,7 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 * Bosnian: {{t-|bs|ikona|f}}
 * Dutch: [[icoon]], [[idool]] {{n}}
 * Finnish: {{t+|fi|symboli}}, {{t-|fi|ikoni}}
+* German: {{t+|de|Symbol|n}}
 * Greek: [[είδωλο]] [ˈiðo̞ˌlo̞] {{n}}, [[ίνδαλμα]] [ˈinðalˌma] {{n}}, [[εικόνα]] [iˈko̞na] {{f}}
 * Italian: {{t+|it|icona|f}}
 {{trans-mid}}
@@ -76,10 +79,11 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 * Czech: {{t-|cs|ikona|f}}
 * Dutch: [[icoon]], [[pictogram]] {{n}}
 * Finnish: {{t+|fi|kuvake}}
+* German: {{t-|de|Icon|n}}
 * Greek: [[εικονίδιο]] [iko̞ˈniðiˌo̞] {{n}}
 * Italian: {{t+|it|icona|f}}
 {{trans-mid}}
-* Polish: [[ikona]] {{f}}, [[ikonka]] {{f}}
+* Polish: {{t+|pl|ikona|f}}, [[ikonka]] {{f}}
 * Serbian:
 *: Cyrillic: [[икона#Serbian|икона]] {{f}}
 *: Latin: [[ikona#Serbian|ikona]] {{f}}
