--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -53,6 +53,7 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 {{trans-mid}}
 * Latin: {{t+|la|icon|f}}
 * Polish: {{t+|pl|ikona|f}}
+* Russian: {{t|ru|икона|f|sc=Cyrl|tr=ikóna}}
 * Serbian:
 *: Cyrillic: [[икона#Serbian|икона]] {{f}}
 *: Latin: [[ikona#Serbian|ikona]] {{f}}
@@ -84,6 +85,7 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 * Italian: {{t+|it|icona|f}}
 {{trans-mid}}
 * Polish: {{t+|pl|ikona|f}}, [[ikonka]] {{f}}
+* Russian: {{t|ru|иконка|f|sc=Cyrl|tr=ikónka}}
 * Serbian:
 *: Cyrillic: [[икона#Serbian|икона]] {{f}}
 *: Latin: [[ikona#Serbian|ikona]] {{f}}
