-# +* in Inflection section, format headers <lies#5508307>

--- a/en/l/lies.16986.wikitext
+++ b/en/l/lies.16986.wikitext
@@ -60,7 +60,7 @@
 
 # [[list]] ''f''
 
-==== Inflection ====
+====Inflection====
 {| class="wikitable" style="text-align: center;"
 |+ '''Inflection'''
 !
@@ -99,7 +99,7 @@
 | ?
 | ?
 |}
-# Dative and accusative are nowadays obsolete, use nominative instead.
+* Dative and accusative are nowadays obsolete, use nominative instead.
 
 [[Category:Limburgish nouns]]
 
