convert AF. to etyl|xno <pen#5518973>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -57,7 +57,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 
 ===Etymology 2===
 [[Image:Ballpoint-pen-parts.jpg|thumb|right|A ballpoint pen, showing assembly.]]
-{{AF.}} ''[[penne]]'', from {{etyl|fro}} ''[[penne]]'', from {{etyl|la}} ''[[penna]]'' ‘feather’.
+{{etyl|xno}} ''[[penne]]'', from {{etyl|fro}} ''[[penne]]'', from {{etyl|la}} ''[[penna]]'' ‘feather’.
 
 ====Noun====
 {{en-noun}}
