--- a/en/p/polyedrous.7205.wikitext
+++ b/en/p/polyedrous.7205.wikitext
@@ -3,4 +3,4 @@
 ===Adjective===
 {{en-adj|-}}
 
-# {{obsolete}} {{alternative spelling of|[[polyhedrous]]}}
+# {{obsolete spelling of|[[polyhedrous]]}}
