--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -88,7 +88,7 @@
 * [[Pashto]]: {{PSchar|[[راتلل]]}}
 * Persian: {{fa-Arab|[[آمدن]]}} (āmædæn)
 * Polish: [[przychodzić]]
-* Portuguese: [[vir]]
+* Portuguese: {{t+|pt|vir}}
 * [[Rohingya]]: [[ai]]
 * Romanian: [[veni]]
 * [[Romansch]]: [[vegnir]]
@@ -107,21 +107,24 @@
 * Bulgarian: [[свършвам]] (svarshvam)
 * Finnish: [[tulla]], [[saada]] [[orgasmi]]
 * French: [[venir]], [[jouir]]
-{{trans-mid}}
 * Italian: [[venire]]
+{{trans-mid}}
 * Polish: [[dochodzić]] / [[dojść]]
+* Portuguese: {{t+|pt|gozar}}
 * Russian: {{t|ru|кончать|tr=končát’}}
 {{trans-bottom}}
 
 {{trans-top|(come at) To attack}}
 * Finnish: [[hyökätä]], [[käydä]] [[päälle]]/[[kimppuun]]
-{{trans-mid}}
 * Polish: [[atakować]] / [[nachodzić]]
+{{trans-mid}}
+* Portuguese: {{t+|pt|atacar}}
 {{trans-bottom}}
 
 {{trans-top|(come by) To get one’s hands on}}
 * French: [[mettre]] la [[main]] sur ...
 {{trans-mid}}
+* Portuguese: {{t+|pt|encontrar}}, {{t|pt|pilhar}}
 {{trans-bottom}}
 
 ===See also===
