--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -25,6 +25,7 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 {{trans-top|that is}}
 * Arabic: {{Arab|[[يعني]]}} {{IPAchar|(yáʕni)}}
 * Bulgarian: [[т.е.]] ([[тоест]], ''toest'')
+* Czech: {{t|cs|t. j.}} ([[to]] [[je]])
 * Danish: [[dvs.]] {{i|[[det]] [[vil]] [[sige]]}}
 * Dutch: {{t-|nl|d.w.z.}} {{i|[[dat]] [[wil]] [[zeggen]]}}
 * Finnish: [[l.]] {{i|[[eli]]}}, [[ts.]] {{i|[[toisin sanoen]]}}
