--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -26,6 +26,7 @@
 * [[Cornish]]: [[Almayn]]
 * Czech: [[Německo]] {{n}}
 * Danish: [[Tyskland]] {{n}}
+* Dhivehi: [[ޖަރުމަނުވިލާތް]] (Jarumanu Vilay)
 * Dutch: [[Duitsland]] {{n}}
 * Esperanto: [[Germanio]], [[Germanujo]]
 * Estonian: [[Saksamaa]]
@@ -48,13 +49,12 @@
 * [[Khmer]]: {{Khmr|[[ប្រទេស​អាឡឺម៉ង់]]}} (bprədtēh āleumong)
 * Korean: [[독일]] (dogil); North Korean: [[도이췰란드]] (doichwillandeu)
 * Latin: [[Germania]] {{f}}
-* Latvian: [[Vācija]] {{f}}
 {{trans-mid}}
+* Latvian: [[Vācija]] {{f}}
 * Lithuanian: [[Vokietija]] {{f}}
 * [[Livonian]]: [[Saksāmō]]
 * [[Luxembourgish]]: [[Däitschland]] {{n}}
 * Malay: [[Jerman]]
-* Maldivian: [[Jarumanu Vilay]]
 * Maltese: il-[[Ġermanja]] {{f}}
 * [[Manx]]: [[y Ghiarmaan]]
 * Norwegian: [[Tyskland]], [[Føderale Republikken Tyskland]]
