/* Noun */ punctuation <float#5559627>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -29,7 +29,7 @@
 # {{context|insurance}} Premiums taken in but not yet paid out.
 #: ''We make a lot of interest from our nightly '''float'''.''
 # {{programming}} Short form of [[floating-point number]].
-#: ''That routine should not have used an int, it should be a '''float'''.''
+#: ''That routine should not have used an int; it should be a '''float'''.''
 # A [[soft]] beverage with a [[scoop]] of vanilla [[ice-cream]] floating in it.
 #: ''It's true - I don't consider anything other than root-beer with vanilla ice-cream to be a "real" '''float'''.''
 # A small sum of money put in a [[cashier]]'s [[till]] at the start of business to enable [[change]] to be made.
