--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -173,6 +173,35 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 
 ----
 
+==Lojban==
+
+===Etymology===
+''In Lojbanized spelling.''
+* Chinese: '''cue'''n
+* English: pi'''ur'''
+* Hindi: '''cu'''d'''v'''a
+* Spanish: p'''ur'''
+
+===Pronunciation===
+* {{IPA|/'ʃurve/|lang=jbo}}
+
+===Gismu===
+{{jbo-gismu|cuv|}}
+
+# [[pure]]; x1 is pure/unadulterated/unmitigated/simple in property x2 (ka).
+
+===Related terms===
+* [[prane]]
+* [[jinsa]]
+* [[manfo]]
+* [[sampu]]
+* [[sepli]]
+* [[traji]]
+* [[lumji]]
+* [[xukmi]]
+
+----
+
 ==Romanian==
 
 ===Pronunciation===
