/* Related terms */ <curve#5559845>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -197,7 +197,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * [[sampu]]
 * [[sepli]]
 * [[traji]]
-* [[lumji]]
+* [[lumci]]
 * [[xukmi]]
 
 ----
