header Related terms to L4 <curve#5559940>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -190,7 +190,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 
 # [[pure]]; x1 is pure/unadulterated/unmitigated/simple in property x2 (ka).
 
-===Related terms===
+====Related terms====
 * [[prane]]
 * [[jinsa]]
 * [[manfo]]
