moved {{also}} to prolog, template -see +also <想#5562530>

--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -1,3 +1,4 @@
+{{also|xiang}}
 ==Translingual==
 {{Han stroke|[[Image:想-order.gif]]}}
 
@@ -42,7 +43,6 @@
 ----
 
 ==Mandarin==
-{{see|xiang}}
 
 ===Pronunciation===
 * {{audio|zh-xiǎng.ogg|audio}}
