added lang=fr to IPA, combined IPA and SAMPA on one line <jeudi#5562618>

--- a/en/j/jeudi.1517.wikitext
+++ b/en/j/jeudi.1517.wikitext
@@ -1,9 +1,8 @@
 ==French==
 
 ===Pronunciation===
-*{{audio|Fr-jeudi-fr-ouest.ogg|audio}}
-*{{IPA|/ʒø.di/}}
-*{{SAMPA|/Z2.di/}}
+* {{audio|Fr-jeudi-fr-ouest.ogg|audio}}
+* {{IPA|/ʒø.di/|lang=fr}}, {{SAMPA|/Z2.di/}}
 
 ===Noun===
 {{fr-noun|m}}
