--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -23,7 +23,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognat
 # {{transitive}} To conduct or engage in (battle, warfare etc.).
 #* ''The battle was '''fought''' just over that hill.''
 # {{transitive}} To engage in combat with; to oppose physically, to contest with.
-#* ''My grandfather '''fought''' the Nazis in the Second World War.''
+#* ''My grandfather '''fought''' the Nazis in World War II.''
 # {{transitive}} To [[try]] to [[overpower]]; to [[fiercely]] [[counteract]].
 #* ''The government pledged to '''fight''' corruption.''
 
