/* Translations */ +ase (ASL) <butter#5565468>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -176,6 +176,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 
 ====Translations====
 {{trans-top|soft foodstuff made from milk}}
+* American Sign Language: {{t|ase|H@TipPalm-PalmDown-OpenB@CenterChesthigh-PalmUp Contact H@BasePalm H@TipPalm Contact H@BasePalm H@TipPalm Contact H@BasePalm}}
 * Arabic: {{Arab|[[زبدة]]}} (zúbda) {{f}}
 * Armenian: [[կարագ]] (karag)
 * [[Bavarian]]: [[Budda]] {{m}}
