sorted/rebalanced translations, trans link [[American Sign Language]] <butter#5565551>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -176,7 +176,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 
 ====Translations====
 {{trans-top|soft foodstuff made from milk}}
-* American Sign Language: {{t|ase|H@TipPalm-PalmDown-OpenB@CenterChesthigh-PalmUp Contact H@BasePalm H@TipPalm Contact H@BasePalm H@TipPalm Contact H@BasePalm}}
+* [[American Sign Language]]: {{t|ase|H@TipPalm-PalmDown-OpenB@CenterChesthigh-PalmUp Contact H@BasePalm H@TipPalm Contact H@BasePalm H@TipPalm Contact H@BasePalm}}
 * Arabic: {{Arab|[[زبدة]]}} (zúbda) {{f}}
 * Armenian: [[կարագ]] (karag)
 * [[Bavarian]]: [[Budda]] {{m}}
@@ -199,8 +199,8 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 * [[Ido]]: [[butro]]
 * [[Interlingua]]: [[butyro]]
 * Irish: {{t+|ga|im|m|xs=Irish}}
-* Italian: {{t+|it|burro|m}}
 {{trans-mid}}
+* Italian: {{t+|it|burro|m}}
 * Japanese: [[バター]] (batā)
 * [[Kinyarwanda]]: [[amavuta]]
 * Korean: [[버터]] (beoteo)
