--- a/en/c/chosen.6834.wikitext
+++ b/en/c/chosen.6834.wikitext
@@ -12,7 +12,11 @@
 
 # {{past participle of|[[choose]]}}
 
+===Adjective===
+
+
 [[Category:English irregular past participles]]
+[[Category:English adjectives ending -en]]
 
 [[ang:chosen]]
 [[el:chosen]]
