--- a/en/c/chosen.6834.wikitext
+++ b/en/c/chosen.6834.wikitext
@@ -15,6 +15,11 @@
 ===Adjective===
 
 
+
+===Related Terms===
+* The chosen few
+* The [[chosen people]]
+
 [[Category:English irregular past participles]]
 [[Category:English adjectives ending -en]]
 
