--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -9,17 +9,7 @@ NOOB
 
 ==Mandarin==
 
-===Pinyin syllable===
-'''pen'''
-
-# A transliteration of any of a number of Chinese characters properly represented as having one of four tones, [[pēn]], [[pén]], [[pěn]], or [[pèn]].
-
-====Usage notes====
-English transcriptions of Chinese speech often fail to distinguish between the critical tonal differences employed in the Chinese language, using words such as this one without the appropriate indication of tone.
-
-[[Category:Mandarin pinyin]]
-
-----
+NOOB
 
 ==Norwegian==
 
