--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -13,43 +13,4 @@ NOOB
 
 ==Norwegian==
 
-===Adjective===
-'''pen'''
-
-# [[beautiful]]
-
-[[am:pen]]
-[[ar:pen]]
-[[ca:pen]]
-[[de:pen]]
-[[el:pen]]
-[[es:pen]]
-[[eu:pen]]
-[[fa:pen]]
-[[fr:pen]]
-[[ko:pen]]
-[[io:pen]]
-[[id:pen]]
-[[it:pen]]
-[[kk:pen]]
-[[ku:pen]]
-[[lo:pen]]
-[[lt:pen]]
-[[hu:pen]]
-[[nl:pen]]
-[[ja:pen]]
-[[no:pen]]
-[[pl:pen]]
-[[pt:pen]]
-[[ru:pen]]
-[[simple:pen]]
-[[fi:pen]]
-[[sv:pen]]
-[[ta:pen]]
-[[te:pen]]
-[[th:pen]]
-[[vi:pen]]
-[[tr:pen]]
-[[uk:pen]]
-[[vo:pen]]
-[[zh:pen]]
+TPEN IS A NOOB
