/* Noun */ + Internet sense <push#5586277>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -136,7 +136,8 @@ From {{etyl|fro}} ''[[poulser]]'' (modern ''[[pousser]]''), from {{etyl|la}} ''[
 #: ''Some details got lost in the '''push''' to get the project done.''
 #: ''Let's give one last push on our advertising campaign.''
 # {{military}} A [[marching]] or [[drill]] [[maneuver]]/[[manoeuvre]] performed by moving a [[formation]] (especially a [[company front]]) [[forward]] or [[toward]] the [[audience]], usually to accompany a dramatic [[climax]] or [[crescendo]] in the music.
-# a wager that results in no loss or gain for the bettor as a result of a tie or even score
+# A wager that results in no loss or gain for the bettor as a result of a tie or even score
+# {{internet}} {{uncountable}} The situation where a [[client]] sends out a request for data from a [[server]], as in ''server pull'', ''pull technology''.
 
 ====Derived terms====
 * [[give someone the push]]
