--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -136,6 +136,7 @@
 #: ''a zipper '''pull'''''
 # {{slang}} [[influence]], especially as a means of gaining [[advantage]]
 # [[appeal|Appeal]] or [[attraction]] or (as of a movie star)
+# {{internet}} {{uncountable}} The situation where a [[client]] sends out a request for data from a [[server]], as in ''server pull'', ''pull technology''.
 
 ====Synonyms====
 * {{i-c|act of pulling}} [[tug]], [[yank]]
