--- a/en/偶/偶.11142.wikitext
+++ b/en/偶/偶.11142.wikitext
@@ -3,7 +3,7 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2622<sub>7</sub>|canj=人田中月 (OWLB)}}
 
-# accidentally, coincidently
+# accidentally, coincidentally
 # an idol
 
 ====References====
