/* Translations */ <Czech Republic#5591541>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -12,6 +12,7 @@
 ====Translations====
 {{trans-top|country in Central Europe}}
 * Arabic: {{Arab|[[جمهورية التشيك]]}}
+* Armenian: [[Չեխիայի Հանրապետություն]] (Čexiayi Hanrapetut'yun)
 * Bosnian: {{t-|bs|Češka Republika|f}}
 * [[Breton]]: [[Republik Tchek]]
 * [[Catalan]]: [[República Txeca]] {{f}}
