--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -62,12 +62,13 @@
 * Navajo: [[Wááshindoon bikéyah ałhidadiidzooígíí]]
 * Nepali: [[संयुक्त राज्य अमेरिका]] (Sa.nyukta Rājya Amerīkā)
 * Norwegian: [[Amerikas forente stater]], [[De forente stater]]
+* Palauan: [[Merikel]]
 * Persian: {{fa-Arab|[[ایالات متحده آمریکا|ایالات متحدهٔ آمریکا]]}} (ayâlât-e motahideh âmrika)
 * Polish: [[Stany Zjednoczone Ameryki]] {{m|p}}, [[Stany Zjednoczone Ameryki Północnej]], ''short:'' [[Stany Zjednoczone]], ''colloquial:'' [[Stany]], [[USA]]
 * Portuguese: [[Estados Unidos da América]] {{m|p}}, ''short:'' [[Estados Unidos]] {{m|p}}, [[EUA]]
 * [[Punjabi]]: [[ਸੰਯੁਕਤ ਰਾਜ ਅਮਰੀਕਾ]]
 * Romanian: {{t+|ro|Statele Unite ale Americii|f|p}}
-* Russian: [[Соединённые Штаты Америки]] (Sojedinjónnyje Štáty Amériki) {{m|p}}, [[США]]
+* Russian: {{t|ru|Соединённые Штаты Америки|tr=Sojedinjónnyje Štáty Amériki|m|p}}, [[США]]
 * [[Scottish Gaelic]]: Na [[Stàitean Aonaichte]] {{f|p}}, Na [[Stàitean Aonaichte na h-Aimeireaga]] {{f|p}}
 * Serbian:
 *: Cyrillic: [[Сједињене Америчке Државе]] {{f|p}}, [[САД]]
