--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -110,7 +110,7 @@
 
 ==Old English==
 
-===Etymology===
+===Etymology 1===
 Inflected form of ''[[hatan|hātan]]''.
 
 ===Pronunciation===
@@ -166,7 +166,7 @@ Inflected form of ''[[hatan|hātan]]''.
 
 ==Tok Pisin==
 
-===Etymology===
+===Etymology 1===
 From English ''[[head]]''.
 
 ===Noun===
