/* Translations */ checked JA <choose#5598770>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -94,6 +94,7 @@ From {{etyl|ang}} {{term|ceosan|ċēosan|lang=ang}}.
 * Hebrew: [[לבחור]] (livkhor)
 * Hungarian: {{t+|hu|kiválaszt}}
 * Italian: {{t+|it|scegliere}}, {{t+|it|selezionare}}
+* Japanese: {{t+|ja|選ぶ}} ({{t+|ja|えらぶ}}, erabu)
 * Maori: {{t-|mi|whiri|xs=Maori}}
 * Portuguese: {{t+|pt|escolher}}
 * Romanian: {{t+|ro|alege}}
@@ -126,7 +127,6 @@ From {{etyl|ang}} {{term|ceosan|ċēosan|lang=ang}}.
 * {{ttbc|Ilocano}}: [[pili]]
 * {{ttbc|Indonesian}}: [[pilih]]
 {{checktrans-mid}}
-* {{ttbc|Japanese}}: [[選ぶ]] ([[えらぶ]], erabu)
 * {{ttbc|Norwegian}}: [[velge]], [[utvelge]], [[beslutte]]
 * {{ttbc|Spanish}}: [[elegir]], [[escoger]]
 * {{ttbc|Tongan}}: [[fili]]
