--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -239,6 +239,7 @@ from {{etyl|gem}} *{{term||kut-|lang=gem}} (Cf. Norwegian [[kutte]]), or from {{
 * German: {{t+|de|einschneiden}}
 * Hebrew: [[לחתוך]] (lakhtokh) (''transitive - to cut something intentionally''); [[להיחתך]] (lehikhatekh) (''intransitive - to be cut unintentionally'')
 {{trans-mid}}
+* Japanese: {{t+|ja|切る}} ({{t+|ja|きる}}, kiru)
 * Italian: {{t+|it|tagliare}}
 * Portuguese: {{t+|pt|cortar}}
 * Spanish: {{t+|es|cortar}}
@@ -253,6 +254,7 @@ from {{etyl|gem}} *{{term||kut-|lang=gem}} (Cf. Norwegian [[kutte]]), or from {{
 * Irish: {{t-|ga|bain|xs=Irish}} {{i|grass, hay, etc.}}
 {{trans-mid}}
 * Italian: {{t+|it|tagliare}}
+* Japanese: {{t+|ja|切る}} ({{t+|ja|きる}}, kiru)
 * Portuguese: {{t+|pt|cortar}}
 * Spanish: {{t+|es|cortar}}
 * Swedish: [[skära]] (''with knife''), [[klippa]] (''with scissors'')
@@ -271,6 +273,7 @@ from {{etyl|gem}} *{{term||kut-|lang=gem}} (Cf. Norwegian [[kutte]]), or from {{
 {{trans-top|to enter a queue in a wrong place}}
 * Danish: [[snyde]]
 * Finnish: {{t-|fi|etuilla}}
+* Japanese: {{t+|ja|横切る}} ({{t+|ja|よこぎる}}, yokogiru)
 * Portuguese: {{t+|pt|furar}}
 {{trans-mid}}
 * Spanish: {{t+|es|colar}}
