--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -74,7 +74,7 @@ See ''[[feel]]''.
 ====Verb====
 '''felt'''
 
-# {{past of|feel}}
+# {{past of|[[feel]]}}
 
 [[Category:English irregular past participles]]
 [[Category:English irregular simple past forms]]
