--- a/en/ש/שבוע.2113.wikitext
+++ b/en/ש/שבוע.2113.wikitext
@@ -18,6 +18,7 @@ From the root {{term|ש-ב-ע||sc=Hebr|tr=sh-v-`}}.
 [[es:שבוע]]
 [[fr:שבוע]]
 [[it:שבוע]]
+[[he:שבוע]]
 [[lt:שבוע]]
 [[pl:שבוע]]
 [[ro:שבוע]]
