--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -88,8 +88,8 @@
 ===Anagrams===
 * {{alphagram|abst}}
 * [[bast]]
-* [[bat]]s
-* [[tab]]s
+* [[bats]]
+* [[tabs]]
 
 [[Category:English concrete nouns]]
 [[Category:English intransitive verbs]]
