--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -25,7 +25,7 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from 
 * [[nadir]]
 
 ====Translations====
-{{trans-top|point in the sky vertically above a given position or observer}}
+{{trans-top|astronomy: point vertically above a position or observer}}
 * Arabic: [[سَمْت]] ,[[ذروة]]
 * Croatian: {{t-|hr|zenit|m}}
 * Czech: {{t+|cs|nadhlavník|m}}
@@ -40,7 +40,8 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from 
 * Spanish: {{t+|es|cenit|m}}
 {{trans-bottom}}
 
-{{trans-top|highest point in the sky reached by a celestial body}}
+{{trans-top|astronomy: highest point reached by a celestial body}}
+* Finnish: {{t|fi|lakipiste}}
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -56,11 +57,11 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from 
 * Spanish: {{t-|es|apogeo|m}}, {{t+|es|cenit|m}}
 {{trans-bottom}}
 
-{{checktrans}}
-
+{{checktrans-top}}
 * {{ttbc|Bulgarian}}: [[зенит]] {{m}}
 * {{ttbc|Esperanto}}: [[zenito]]
 * {{ttbc|Interlingua}}: [[zenit]]
+{{trans-bottom}}
 
 [[de:zenith]]
 [[el:zenith]]
