/* Translations */ +ru <zenith#5619382>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -44,6 +44,7 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from 
 * Czech: {{t+|cs|nadhlavník|m}}, {{t-|cs|zenit|m}}
 * Finnish: {{t|fi|lakipiste}}
 {{trans-mid}}
+* Russian: [[зенит]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|highest point or state; peak}}
@@ -56,6 +57,7 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from 
 * German: {{t-|de|Zenit|m}}
 * Italian: {{t-|it|zenit|m}}, {{t+|it|culmine|m}}, {{t+|it|apice|m}}
 * Japanese: {{t-|ja|頂点|tr=chōten|sc=Jpan}}, {{t|ja|絶頂|tr=zecchō|sc=Jpan}}
+* Russian: [[зенит]] {{m}}, [[расцвет]] {{m}}, [[высшый|высшая]] [[точка]] {{f}}
 * [[Scottish Gaelic]]: {{t-|gd|bàrr|m}}
 * Spanish: {{t-|es|apogeo|m}}, {{t+|es|cenit|m}}
 {{trans-bottom}}
