--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -5,8 +5,8 @@
 From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from {{etyl|fro|en}} {{term|cenit|lang=fro}} and/or {{etyl|la|en}} {{term|cenit|lang=la}} from {{etyl|ar|en}} {{term|سمت|السَّمْت|direction of heads|tr=as-samt|lang=ar|sc=Arab}}.
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/ˈzɛn.iθ/}}
-* {{a|US}} {{IPA|/ˈzi.niθ/}}
+* {{a|UK}} {{IPA|/ˈzɛn.ɪθ/}}
+* {{a|US}} {{IPA|/ˈzi.nɪθ/}}
 * {{audio|en-us-zenith.ogg|Audio (US)}}
 
 ===Noun===
