--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -133,12 +133,15 @@
 * [[kingdom come]]
 
 ===Noun===
-{{en-noun|-}} (also [[cum]])
+{{en-noun|-}}
 
-# {{slang}} [[semen]] or female [[ejaculatory]] [[discharge]].
+# {{obsolete}} [[coming|Coming]], [[arrival]]; [[approach]].
+#*'''1869''', RD Blackmoore, ''Lorna Doone'', II:
+#*:“If we count three before the '''come''' of thee, thwacked thou art, and must go to the women.”
+# {{slang}} [[semen|Semen]], or female [[ejaculatory]] [[discharge]].
 
-====Usage notes====
-This spelling (for this meaning) is extremely rare, in comparison to the homophone [[cum]].
+====See also====
+*[[cum]]
 
 ===Preposition===
 '''come'''
