--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -20,8 +20,6 @@
 #: ''She'll be '''coming''' 'round the mountain when she '''comes'''...''
 # {{intransitive}} {{slang}} {{alternative spelling of|[[cum]]}}  To [[orgasm]].
 #: ''He '''came''' after a few minutes.''
-# {{intransitive|construed with '''at'''}} To [[attack]].
-#: ''She '''came''' at him with a knife.''
 
 ====Antonyms====
 * [[leave]], [[go]]
@@ -33,6 +31,7 @@
 * [[come after]]
 * [[come along]]
 * [[come around]]
+* [[come at]]
 * [[come back]]
 * [[come by]]
 * [[come clean]]
@@ -112,13 +111,6 @@
 * Polish: [[dochodzić]] / [[dojść]]
 * Portuguese: {{t+|pt|gozar}}
 * Russian: {{t|ru|кончать|tr=končát’}}
-{{trans-bottom}}
-
-{{trans-top|(come at) To attack}}
-* Finnish: [[hyökätä]], [[käydä]] [[päälle]]/[[kimppuun]]
-* Polish: [[atakować]] / [[nachodzić]]
-{{trans-mid}}
-* Portuguese: {{t+|pt|atacar}}
 {{trans-bottom}}
 
 ===See also===
