--- a/en/傌/傌.11164.wikitext
+++ b/en/傌/傌.11164.wikitext
@@ -3,8 +3,8 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2122<sub>7</sub>|canj=人尸手火 (OSQF)}}
 
-# to curse, to revile, to abuse
-# to scold
+# to [[curse]], to [[revile]], to [[abuse]]
+# to [[scold]]
 
 ====References====
 * {{Han ref|kx=0113.010|dkj=00947|dj=0240.110|hdz=10200.020|uh=508C|ud=20620|bh=D858|bd=55384}}
