--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -50,6 +50,7 @@
 * Spanish: [[tortuga terrestre]] {{f}}, [[morrocoy]] {{m}} {{italbrac|Venezuela}}
 * Swedish: [[sköldpadda]] [[:sv:sköldpadda|º]]
 * [[Telugu]]: [[తాబేలు]] (taabealu)
+* Turkish: [[kaplumbağa]], [[tosbağa]]
 * [[Uyghur]]:
 *: Cyrillic: [[ташпақа]]
 *: Persic: {{fa-Arab|[[تاشپاقا]]}}
