--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -29,6 +29,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 
 =====Translations=====
 {{trans-top|playful activity}}
+* American Sign Language: [[A@Left1Chesthigh-A@Right1Chesthigh Upanddown]]
 * Albanian: [[lojë]] {{f}}
 * Arabic: {{t+|ar|لعبة|f|sc=Arab}}
 * Armenian: [[խաղ]] (xaġ)
