--- a/en/愁/愁.15637.wikitext
+++ b/en/愁/愁.15637.wikitext
@@ -48,6 +48,12 @@
 
 # {{defn|Mandarin}}
 
+----
+
+==Vietnamese==
+===Han character===
+'''愁''' ([[sầu]], [[rầu]], [[ràu]], [[xàu]], [[xầu]])
+
 [[fr:愁]]
 [[li:愁]]
 [[ja:愁]]
