/* Noun */ add quote from vathek <zenith#5641385>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -17,6 +17,13 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from 
 #* '''1719-''' [[w:Daniel Defoe|Daniel Defoe]], ''[[w:Robinson Crusoe|Robinson Crusoe]]''
 #*: ...in the middle of the day, when the sun was in the '''zenith''', the violence of the heat was too great to stir out...
 # Highest point or [[state]]; [[peak]].
+#* {{quote-book
+|page=173
+|year=1900
+|author=William Beckford
+|title=The History of the Caliph Vathek
+|url=http://books.google.com/books?id=KnArAAAAMAAJ
+|passage="There for a while I enjoyed myself in the '''zenith''' of glory and pleasure."}}
 
 ====Synonyms====
 * {{sense|highest point or state}} [[acme]], [[culmination]], [[pinnacle]]
