--- a/en/坦/坦.13033.wikitext
+++ b/en/坦/坦.13033.wikitext
@@ -53,7 +53,7 @@
 
 ==Vietnamese==
 ===Han character===
-'''坦''' ([[đất]], [[đắt]], [[đứt]], [[thản]], [[đật]], [[ngẩn]], [[thưỡn]])
+'''坦''' ([[thản]], [[đất]], [[đắt]], [[đứt]], [[đật]], [[ngẩn]], [[thưỡn]])
 
 [[fr:坦]]
 [[ko:坦]]
