--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -16,9 +16,8 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 #: ''Asia is a large continent, with many large nations ('''e.g.''' China, India, and Japan).''
 
 ====Usage notes====
-{{unreferenced}}
-* The list of examples following ''e.g.'' should not be exhaustive (in that case, ''[[i.e.]]'' should be used) and should not be followed by ''[[et cetera]]'' or ''[[etc.]]''
-* Opinion is mixed about whether this term should be italicized, whether it should be written with a separating non-breaking space as in ''e. g.'', and whether it should be followed with a comma.
+* The list of examples following ''e.g.'' should not be exhaustive<ref>'''2002''', The Complete Plain Words, ''Ernest Gowers, Sidney Greenbaum, Janet Whitcut''</ref> (in that case, ''[[i.e.]]'' should be used) and should not be followed by ''[[et cetera]]'' or ''[[etc.]]'' as this is tautology.
+* Opinion is mixed about whether this term should be italicized as although it is Latin, it has become part of standard English, whether it should be written with a separating space "''e. g.''" as it was originally two seperate words, and whether it should be followed by a comma.
 
 ====Translations====
 {{trans-top|abbreviation for “for example”}}
