--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -1,5 +1,6 @@
-{{wikipedia}}
+{{was wotd|2008|November|28}}
 ==English==
+{{wikipedia}}
 
 ===Etymology===
 From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from {{etyl|fro|en}} {{term|cenit|lang=fro}} and/or {{etyl|la|en}} {{term|cenit|lang=la}} from {{etyl|ar|en}} {{term|سمت|السَّمْت|direction of heads|tr=as-samt|lang=ar|sc=Arab}}.
