iwiki +et <curve#5650557>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -225,6 +225,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 
 [[ar:curve]]
 [[de:curve]]
+[[et:curve]]
 [[fa:curve]]
 [[fr:curve]]
 [[hy:curve]]
