--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -33,7 +33,7 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 * French: [[par ex.]], [[p. ex.]] {{i|[[par exemple]]}}<!-- are both right? -->
 * German: [[z. B.]] {{i|[[zum Beispiel]]}}
 * Greek: [[π.χ.]] {{i|[[παραδείγματος χάριν]]}}
-* {{ttbc|Hebrew}}: {{i|{{t|he|לדוגמא|sc=Hebr}}}}
+* Hebrew: {{t|he|לדוגמה|tr=ledugma|sc=Hebr}}
 * Hungarian: [[pl.]] {{i|[[például]]}}
 * Icelandic: [[t.d.]] {{i|[[til dæmis]]}}
 * Italian: [[ad es.]] {{i|[[ad esempio]]}}
