--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -114,6 +114,7 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 * [[iconicus]]
 * [[iconismus]]
 
+[[et:icon]]
 [[io:icon]]
 [[it:icon]]
 [[kk:icon]]
