/* Alternative spellings */ <spelled#5665455>

--- a/en/s/spelled.7212.wikitext
+++ b/en/s/spelled.7212.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Alternative spellings===
-*{{UK}} [[spelt]]
+*{{Commonwealth}} [[spelt]]
 
 ===Pronunciation===
 *{{IPA|/ˈspεld/}}, {{SAMPA|/"spEld/}}
