--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -1,5 +1,5 @@
 ==English==
-
+{{Wikipedia|United States|United States of America}}
 ===Proper noun===
 '''the [[united|United]] [[states|States]] [[of]] [[America]]'''
 
