/* Noun */ see also <spelt#5677862>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -31,6 +31,10 @@ Unknown, but Old English {{term|spelt|lang=ang}}, and Late Latin {{term|spelda|l
 
 # A grain, considered either a subspecies of [[wheat]], ''[[Triticum aestivum spelta]]'', or a separate species ''[[Triticum spelta]]''.
 
+=====See also=====
+* [[emmer]]
+* [[farro]]
+
 =====Translations=====
 {{trans-top|a type of wheat, Triticum aestivum spelta}}
 * {{trreq|Chinese}}
