--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -35,17 +35,37 @@ Unknown, but Old English {{term|spelt|lang=ang}}, and Late Latin {{term|spelda|l
 * [[emmer]]
 * [[farro]]
 
+{{wikipedia}}
 =====Translations=====
 {{trans-top|a type of wheat, Triticum aestivum spelta}}
+* Basque: {{t|eu|espelta}}
+* Breton: {{t|br|yell}}
+* Catalan: {{t|ca|espelta|f}}
 * {{trreq|Chinese}}
+* Croatian: {{t|hr|pir|m}}, {{t|hr|prapšenica|f}}
+* Czech: {{t|cs|pšenice špalda|f}}
+* Danish: {{t|da|spelt}}
 * Dutch: {{t+|nl|spelt}}
-* {{trreq|French}}
+* Esperanto: {{t|eo|spelto}}
+* Estonian: {{t|et|speltanisu}}
+* Finnish: {{t|fi|spelttivehnä}}
+* French: {{t|fr|épeautre}}
 * German: {{t+|de|Dinkel|m}}
 {{trans-mid}}
+* Hebrew: {{t|he|כוסמין}}
 * Hungarian: {{t|hu|tönkölybúza}}
-* {{trreq|Italian}}
-* {{trreq|Russian}}
-* {{trreq|Spanish}}
+* Icelandic: {{t|is|spelt}}
+* Italian: {{t|it|spelta|f}}
+* Luxembourgish: {{t|lb|Spelz}}
+* Norwegian: {{t|no|spelt}}
+* Polish: {{t|pl|pszenica orkisz|f}}
+* Portuguese: {{t|pt|espelta|f}}
+* Russian: {{t|ru|полба|tr=pólba|f}}
+* Serbian: {{t|sr|прапшеница|tr=prapšenica|f}}
+* Slovene: {{t|sl|pira|f}}
+* Spanish: {{t|es|espelta|f}}, {{t|es|escanda|f}}
+* Swedish: {{t|sv|dinkel}}
+* Walloon: {{t|wa|speate}}
 {{trans-bottom}}
 
 ===Etymology 3===
