--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -5,7 +5,8 @@
 * [[blonde]] (US)
 
 ===Etymology===
-: from Middle French "''blond''" (masculine); "''blonde''" (feminine) which likely derived from Germanic (compare Old English "''blonden''feax" - ''grey''-haired).
+From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}},
+likely derived from {{etyl|gem}}; compare Old English {{term|blondenfeax|''blonden''feax|''grey''-haired|lang=ang}}.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/blɒnd/}}
