--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -180,6 +180,7 @@ From {{etyl|fro}} {{term|porter|lang=fr}} < {{etyl|la}} {{term|portare||carry|la
 =====Translations=====
 {{trans-top|computing: to adapt a program so that it works on a different platform}}
 * Dutch: {{t-|nl|overdragen}}
+* Finnish: {{t+|fi|siirtää}}
 {{trans-mid}}
 * Swedish: {{t-|sv|portera}}, {{t+|sv|porta}}
 {{trans-bottom}}
