--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -164,7 +164,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 ===Noun===
 '''curve''' {{f}}
 
-# {{plural of|curva}}
+# {{plural of|curva|lang=it}}
 
 ===Adjective===
 '''curve'''
