--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -241,6 +241,7 @@ from {{etyl|gem}} *{{term||kut-|lang=gem}} (Cf. Norwegian [[kutte]]), or from {{
 {{trans-mid}}
 * Japanese: {{t+|ja|切る|sc=Jpan}} ({{t+|ja|きる|sc=Jpan}}, kiru)
 * Italian: {{t+|it|tagliare}}
+* Polish: [[ciąć]]
 * Portuguese: {{t+|pt|cortar}}
 * Spanish: {{t+|es|cortar}}
 * Swedish: {{t+|sv|skära}}
