--- a/en/慚/慚.15726.wikitext
+++ b/en/慚/慚.15726.wikitext
@@ -53,7 +53,7 @@
 
 ==Vietnamese==
 ===Han character===
-'''慚''' ([[tuồm]], [[tam]], [[tàm]], [[tom]], [[tùm]])
+'''慚''' ([[tàm]], [[tuồm]], [[tam]], [[tom]], [[tùm]])
 
 [[fr:慚]]
 [[li:慚]]
