--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -16,7 +16,7 @@ From the {{etyl|fa}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning
 {{en-noun|-}} {{pluralonly}}
 
 # {{US}} [[Clothes]] for wearing to bed and sleeping in, usually consisting of a loose-fitting shirt and pants.
-# Loose-fitting [[trousers]] worn in [[South Asia]] by both sexes.
+# Loose-fitting [[trousers]] worn in the [[Far East]] by both sexes.
 
 ====Translations====
 {{trans-top|clothes for wearing to bed and sleeping in}}
