/* Noun */ merge Translations sections. <pajamas#5699357>

--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -19,6 +19,7 @@ From the {{etyl|fa}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning
 # Loose-fitting [[trousers]] worn in the [[Far East]] by both sexes.
 
 ====Translations====
+* ''See [[pyjamas#Translations|pyjamas]]''
 {{trans-top|clothes for wearing to bed and sleeping in}}
 * Bosnian: {{t-|bs|pidžama|f|s}}
 * Chinese: [[睡衣]] (shuì yī, lit. ''sleep clothing'')
@@ -32,7 +33,7 @@ From the {{etyl|fa}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning
 * [[Interlingua]]: [[pajama]]
 {{trans-mid}}
 * Japanese: [[パジャマ]] (pajama)
-* Korean: [[잠옷]] jahm-oht
+* Korean: {{t|잠옷|tr=jam-ot}}
 * Portuguese: {{t-|pt|pijama|m|s}}
 * Russian: {{t+|ru|пижама|f|s|sc=Cyrl}}
 * Serbian:
@@ -44,10 +45,6 @@ From the {{etyl|fa}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning
 
 ====Derived terms====
 * [[cat's pajamas|cat’s pajamas]]
-
-====Translations====
-* ''See [[pyjamas#Translations|pyjamas]]''
-* Korean: [[잠옷]] jahm-oht
 
 ====See also====
 * [[nightshirt]]
