--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -37,10 +37,10 @@ Pictographic representation of the sun ([[日]]) appearing over the horizon.
 * {{ja-readings|on=[[たん]] (tan)|kun=[[あした]] (ashita)}}
 
 ====Compounds====
-{{top}}
+{{top2}}
 * [[旦夕]]
 * [[元旦]]
-{{bottom}}
+{{bottom2}}
 
 ----
 
