--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -33,6 +33,13 @@
 ====Readings====
 * {{ja-readings|on=[[ざ]] (za)|kun=[[すわる]] (suwaru), [[そぞろに]] (sozoroni), [[おわす]] (owasu)}}
 
+====Compounds====
+* [[坐視]]
+* [[坐礁]]
+* [[坐洲]]
+* [[端坐]]
+* [[連坐]]
+
 ----
 
 ==Korean==
