--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -104,6 +104,7 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 [[Category:1000 English basic words]]
 
 [[ar:secretary]]
+[[de:secretary]]
 [[et:secretary]]
 [[el:secretary]]
 [[fr:secretary]]
