--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -22,6 +22,7 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 ====Translations====
 {{trans-top|abbreviation for “for example”}}
 * Arabic: [[على سبيل المثال]]
+* Armenian: {{t|hy|օր.|tr=òr.}} {{i|[[օրինակ]]}}
 * Bosnian: {{t-|bs|npr.}} {{i|[[na]] [[primjer]]}}
 * [[Catalan]]: [[p. ex.]] [[per exemple]]
 * Chinese: [[例如]] (li4 ru2)
