--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -62,7 +62,7 @@
 * Italian: {{t+|it|antipatico|m}}
 {{trans-bottom}}
 
-{{trans-top|frightening or disconcerting person}}
+{{trans-top|Cole Henry!}}
 * Finnish: [[kyylä]], [[hyypiö]]
 {{trans-mid}}
 {{trans-bottom}}
