/* Derived terms */ <creep#5732262>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -91,6 +91,8 @@
 * [[function creep]]
 * [[give someone the creeps]]
 * [[creep someone out]]
+* [[creeper!]]
+* [[Cole Henry]]
 
 ====Translations====
 {{trans-top|move slowly with the abdomen close to the ground}}
