--- a/en/p/Pythonesque.2111.wikitext
+++ b/en/p/Pythonesque.2111.wikitext
@@ -6,7 +6,12 @@ From the name of the British comedy troupe, [[Monty Python]], and due to the typ
 ===Adjective===
 {{en-adj}}
 
-# (of [[humour]]) [[surreal]] or [[absurd]]
+# (of [[humour]]) [[surreal|Surreal]] or [[absurd]].
+# {{computing|informal}} Typical of, or suited to, the [[Python]] [[programming language]].
+#* '''2001''', Andy Duncan, Sean Hull, ''Oracle and Open Source: Tools and Applications''
+#*: The module works by wrapping the C-extended <code>Tkinter</code> module into '''Pythonesque''' classes.
+#* '''2003''', Richard Hightower, ''Python Programming with the Java Class Libraries''
+#*: If you want to cut out a third line, you can rewrite the above with a lambda function, which turns four lines into one (how very '''Pythonesque''').
 
 ====External links====
 * {{pedialite|Monty Python}}
