--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -32,7 +32,7 @@ From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coût]]'').
 * Japanese: {{t+|ja|費用|tr=[[ひよう]], hiyō|sc=Jpan}}
 * Kurdish: {{KUchar|[[به‌ها]]}}, {{KUchar|[[نرخ]]}}
 * [[Novial]]: [[kosto]]
-* Polish: {t|pl|koszt|m}}
+* Polish: {{t|pl|koszt|m}}
 * Portuguese: {{t+|pt|custo|m}}
 * [[Scottish Gaelic]]: {{t-|gd|cosgais|f|xs=Scottish Gaelic}}
 * Spanish: {{t+|es|costo|m}}
