/* Translations */ +hu <secretary#5750575>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -36,7 +36,7 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 * French: {{t+|fr|secrétaire|m|f}}
 * German: {{t+|de|Sekretär|m}}
 * Hebrew: {{he-translation|מזכיר|mazkir}} {{m}}
-* Hungarian: {{t+|hu|titkár}}
+* Hungarian: {{t+|hu|titkár}}, {{t+|hu|titkárnő}}
 * [[Interlingua]]: [[secretaria]] {{f}}
 * Italian: {{t+|it|segretario|m}}
 {{trans-mid}}
@@ -58,12 +58,13 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 * Esperanto: {{t-|eo|sekretario|xs=Esperanto}}
 * Finnish: {{t+|fi|ministeri}}
 * French: {{t+|fr|secrétaire}}
+* Hungarian: {{t+|hu|miniszter}}, {{t-|hu|államtitkár}}
 * [[Interlingua]]: [[secretaria]] {{f}}
 * Japanese: [[大臣]] (daijin), [[長官]] (chōkan)
+{{trans-mid}}
 * Kurdish:
 *: Kurmanji: [[sekreter]]
 *: Sorani: {{t|ku|سکرتێر|tr=sikirtaer|sc=KUchar}}
-{{trans-mid}}
 * Portuguese: {{t+|pt|secretário|m}}, {{t+|pt|secretária|f}}
 * Spanish: {{t-|es|secretario|m}}
 * [[Telugu]]: [[కార్యదర్శి]] (kaaryadarSi)
@@ -72,16 +73,18 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 
 {{trans-top|leading or managerial position in certain organizations}}
 * Czech: {{t-|cs|tajemník|m}}
-{{trans-mid}}
 * Finnish: {{t-|fi|sihteeri}}
+{{trans-mid}}
+* Hungarian: {{t-|hu|főtitkár}}
 {{trans-bottom}}
 
 {{trans-top|type of desk}}
 * Finnish: {{t+|fi|kirjoituspöytä}}
 * French: {{t+|fr|secrétaire}}
 * German: {{t-|de|Schreibsekretär|m}}
-* [[Interlingua]]: [[bureau]]
+* Hungarian: {{t-|hu|szekreter}}
 {{trans-mid}}
+* [[Interlingua]]: [[bureau]]
 * Kurdish:
 *: Kurmanji: [[sekreter]]
 * Portuguese: {{t+|pt|escrivaninha|f}}
