--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -14,6 +14,9 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from 
 {{en-noun}}
 
 # {{astronomy}} The point in the sky [[vertically]] above a given position or observer; the [[point]] in the [[celestial sphere]] opposite the [[nadir]].
+#* '''1671–1693''': Rev. Thomas Jolly, ''private notebook'' ; printed in:
+#* '''1895''': Henry Fishwick [ed.], ''The Note Book of the Rev. Thomas Jolly: A.D. 1671–1693. Extracts from the Church Books of Altham and Wymondhouses, 1649–1725. And an Account of the Jolly Family of Standish, Gorton, and Altham'', [http://books.google.co.uk/books?ei=L-9bSa-FKYuiyAS3xqmCDA&id=TA71Bp2xMq0C&dq=%22of+christ+and+his+gospell%2C%22&q=zenith&pgis=1#search_anchor page 44]
+#*: In this 10th m. appeared that prodigious Comett the tayl whereof was like the blade of a double edged sword, and reached almost from the horizon to the '''zenith'''.
 # {{astronomy}} The [[highest]] point in the sky reached by a [[celestial body]].
 #* '''1719-''' [[w:Daniel Defoe|Daniel Defoe]], ''[[w:Robinson Crusoe|Robinson Crusoe]]''
 #*: ...in the middle of the day, when the sun was in the '''zenith''', the violence of the heat was too great to stir out...
