--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -20,9 +20,9 @@
 #: ''She'll be '''coming''' 'round the mountain when she '''comes'''...''
 # {{intransitive}} {{slang}} {{alternative spelling of|[[cum]]}}  To [[orgasm]].
 #: ''He '''came''' after a few minutes.''
-# {{copulative}} To [[become]].
+# {{context|copulative}} To [[become]].
 #: ''He was a dream '''come''' true.''
-# {{copulative}} To [[turn out]] to be.
+# {{context|copulative}} To [[turn out]] to be.
 #: ''The '''came''' close to winning.''
 
 ====Antonyms====
