--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -65,6 +65,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 {{trans-top|literary composition}}
 * Finnish: {{t+|fi|näytelmä}}
 {{trans-mid}}
+* Russian: {{t+|ru|пьеса|f|tr=p’jésa|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|theatrical performance}}
@@ -105,6 +106,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Kurdish: {{t+|ku|yarî|f}}, {{t+|ku|lîstik|f}}
 {{trans-mid}}
 * Polish: {{t+|pl|gra|f}}
+* Russian: {{t+|ru|игра|f|tr=igrá|sc=Cyrl}}
 * Slovene: {{t+|sl|igra|f}}
 * Swedish: {{t+|sv|spel|c}}
 {{trans-bottom}}
@@ -123,6 +125,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Finnish: {{t|fi|välys}}, {{t|fi|klappi}}, {{t+|fi|löysä}}
 * Hungarian: [[holtjáték]]
 {{trans-mid}}
+* Russian: {{t|ru|люфт|m|sc=Cyrl|tr=l'uft}}, {{t|ru|зазор|m|sc=Cyrl|tr=zazór}}, {{t|ru|свободный ход|m|sc=Cyrl|tr=svobódnyj xod}}
 * Spanish: {{t+|es|juego|m}}
 {{trans-bottom}}
 
