--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -26,6 +26,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Armenian: [[վարագույր]] (varaguyr)
 * Czech: [[závěs]] {{m}}
 * Finnish: [[verho]]
+* French: [[rideau]] {{m}}
 * German: [[Vorhang]] {{m}}
 * Hebrew: [[וילון]] (vilon) {{m}}
 * Italian: [[tenda]] {{f}}
