--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -37,6 +37,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Russian: [[штора]] (štóra) {{f}}, [[занавеска]] (zanav'éska) {{f}}
 * Slovene: [[zavesa]] {{f}}
 * Spanish: [[cortina]] {{f}}
+* Turkish: [[perde]]
 {{trans-bottom}}
 
 {{trans-top|piece of cloth in a theater}}
@@ -51,17 +52,16 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Russian: [[занавес]] (zánav'es) {{m}}
 * Slovene: [[zavesa]] {{f}}
 * Spanish: [[cortina]] {{f}}
+* Turkish: [[perde]]
 {{trans-bottom}}
 
 {{checktrans-top}}
 * {{ttbc|Arabic}}: [[ستارة]] (setāra) {{f}}
 * {{ttbc|CJKV Characters}}: [[幕]]
-* {{ttbc|French}}: [[rideau]] {{m}}
 * {{ttbc|Indonesian}}: [[serambi]], [[korden]], [[layar]]
 * {{ttbc|Kurdish}}: [[perde]] {{f}}
 * {{ttbc|Slovak}}: [[opona]] {{f}}
 * {{ttbc|Spanish}}: [[cortina]] {{f}}
-* {{ttbc|Turkish}}: [[perde]]
 {{trans-bottom}}
 
 ===Verb===
