iwiki +ko <substance#5918012>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -155,6 +155,7 @@ From {{etyl|la}} ''[[substantia]]'', '''substance''' or '''essence''', noun form
 [[el:substance]]
 [[fa:substance]]
 [[fr:substance]]
+[[ko:substance]]
 [[io:substance]]
 [[id:substance]]
 [[it:substance]]
