--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -32,6 +32,7 @@
 #: ''a '''straight''' six.''
 # ''[[slang]]'': conventional.
 # ''[[slang]]'': heterosexual.
+# ''[[slang]]'': satisfied.
 # ''[[slang]]'': boring, unappealing, bad or of low quality.
 # {{cricket}} On, or near a line running between the two [[wicket]]s.
 
