--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -49,6 +49,7 @@
 
 ====Translations====
 {{trans-top|Not crooked or bent}}
+* Armenian: {{t+|hy|ուղիղ}}
 * Czech: {{t-|cs|přímý|m}}
 * Dutch: [[recht]], [[rechte]]
 * Finnish: {{t+|fi|suora}}
