/* Compounds */ 意志, cols <意#5949723>

--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -31,8 +31,12 @@
 * {{ja-readings|on=[[い]] (i)|kun=[[こころ]] (kokoro), [[おもい]] (omoi), [[おもう]] (omou)}}
 
 ====Compounds====
+{{top2}}
 * [[意味]]
 * [[意気]]
+{{mid2}}
+*{{term|意志||will, intent|tr=[[いし]], [[ishi]]|sc=Jpan|lang=ja}}
+{{bottom}}
 
 ----
 
