/* Etymology */ trim <Israel#5953663>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -6,7 +6,7 @@
 * {{enPR|ĭz'rāəl|ĭz'rēəl}}; {{IPA|/ˈɪzreɪəl/|/ˈɪzriəl/}}; {{SAMPA|/"IzreI@l/|/"Izri@l/}}
 
 ===Etymology===
-Originally from {{etyl|he}} ''[[ישראל]]'', the name "Israel" is rooted in the [[w:Hebrew Bible|Hebrew Bible]], where [[Jacob]] is renamed Israel after wrestling with a mysterious adversary. This adversary was "a man", and later "God" according to [[w:Genesis (Old Testament)|Genesis]] 32:24–30; or "the angel of Esau", according to [[w:Book of Hosea|Hosea]] 12:4. The biblical nation fathered by Jacob was then called "The Children of Israel" or the "Israelites". Citizens of the modern State of Israel are referred to, in English, as "Israelis".
+From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Biblical name for [[Jacob]] after he wrestles with an adversary.
 
 ===Proper noun===
 {{en-proper noun}}
