--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -19,7 +19,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 
 ====Translations====
 {{trans-top|to regurgitate the contents of a stomach}}
-* Armenian: {{t|hy|հետ տալ|sc=Hayeren|xs=Armenian}}, {{t|hy|փսխել|sc=Hayeren|xs=Armenian}}
+* Armenian: {{t|hy|հետ տալ|sc=Armn|tr=het tal}}, {{t|hy|փսխել|sc=Armn|tr=p'sxel}}, {{t|hy|ործկալ|sc=Armn|tr=orçkal}}
 * Czech: {{t+|cs|zvracet}}
 * Dutch: {{t+|nl|overgeven}}, {{t+|nl|braken}}, {{t|nl|kotsen}} {{qualifier|colloquial}}
 * Esperanto: {{t-|eo|vomi|xs=Esperanto}}
@@ -54,6 +54,7 @@ See [[WikiSaurus:vomit]].
 
 ====Translations====
 {{trans-top|regurgitated former contents of a stomach}}
+* Armenian: {{t|hy|փսխունք|sc=Armn|tr=p'sxunk'}}
 * Bosnian: Dusmabagey
 * Czech: {{t-|cs|zvratky|m|p}}
 * Dutch: [[braaksel]], ''(colloquial)'' [[kots]]
