--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -34,6 +34,7 @@ From {{etyl|fro}} ''[[branche]]''.
 
 ====Translations====
 {{trans-top|woody part of a tree arising from the trunk and usually dividing}}
+* Armenian: {{t|hy|ճյուղ|sc=Armn|tr=č̣yuġ}}
 * Bosnian: {{t-|bs|grana|f}}
 * Croatian: {{t-|hr|grana|f}}
 * Czech: {{t-|cs|větev|f}}
@@ -58,6 +59,7 @@ From {{etyl|fro}} ''[[branche]]''.
 {{trans-bottom}}
 
 {{trans-top|something that divides like the branch of a tree}}
+* Armenian: {{t|hy|ճյուղ|sc=Armn|tr=č̣yuġ}}
 * Bosnian: {{t-|bs|grana|f}}
 * Croatian: {{t-|hr|grana|f}}
 * Dutch: {{t+|nl|tak}}
@@ -73,6 +75,7 @@ From {{etyl|fro}} ''[[branche]]''.
 {{trans-bottom}}
 
 {{trans-top|office of an organization with several locations}}
+* Armenian: {{t|hy|մասնաճյուղ|sc=Armn|tr=masnač̣yuġ}}
 * Dutch: {{t+|nl|filiaal}}
 * Finnish: [[sivukonttori]]
 * German: {{t+|de|Zweigstelle|f}}, {{t+|de|Filiale|f}}
@@ -95,6 +98,7 @@ From {{etyl|fro}} ''[[branche]]''.
 {{trans-bottom}}
 
 {{trans-top|an area in business or of knowledge, research}}
+* Armenian: {{t|hy|ճյուղ|sc=Armn|tr=č̣yuġ}}
 * Dutch: {{t+|nl|branch}} (of business), {{t|nl|bedrijfstak}} (of business), {{t+|nl|vakgebied}} (of knowledge)
 * Finnish: {{t+|fi|ala}}
 * German: {{t+|de|Branche|f}} (of business)
