--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -22,6 +22,7 @@
 # {{context|informal|pejorative}} An annoying irritating person
 # {{context|informal|pejorative}} A frightening and/or disconcerting person, especially one who gives the speaker [[chills]] or who induces [[psychosomatic]] facial itching.
 #: ''Stop following me, you '''creep'''!''
+# {{context|agriculture}} A barrier with small openings used to keep large animals out while allowing smaller animals to pass through.
 
 ====Translations====
 {{trans-top|movement of something that creeps}}
