--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -15,7 +15,7 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 # A person who keeps [[records]], takes [[notes]] and handles general [[clerical]] work.
 # The [[head]] of a [[department]] of [[government]].
 # A managerial or leading position in certain non-profit organizations, such as political parties, trade unions, international organizations.
-#: ''Kofi Annan is the current secretary general of the United Nations.''
+#: ''Ban Ki-Moon is the current secretary general of the United Nations.''
 # A type of [[desk]].
 # A species of [[bird]]; ''Sagittarius serpentarius''.
 
