--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -25,6 +25,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 ====Translations====
 {{trans-top|piece of cloth covering a window}}
 * Armenian: [[վարագույր]] (varaguyr)
+* Croatian: {{t|hr|zavjesa|alt=zȃvjesa|f}}, {{t|hr|zastor|alt=zástor|m}}
 * Czech: [[závěs]] {{m}}
 * Finnish: [[verho]]
 * French: [[rideau]] {{m}}
@@ -43,6 +44,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 
 {{trans-top|piece of cloth in a theater}}
 * Armenian: [[վարագույր]] (varaguyr)
+* Croatian: {{t|hr|zavjesa|alt=zȃvjesa|f}}, {{t|hr|zastor|alt=zástor|m}}
 * Czech: [[opona]] {{f}}
 * Finnish: [[esirippu]]
 * German: [[Vorhang]] {{m}}
