--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -3,7 +3,8 @@
 {{rank|England|sense|ten|422|beautiful|possible|mark|followed}}
 
 ===Etymology===
-* From [[beauty]] and Germanic ''[[-ful]]'', "full of".
+* From [[beauty]] and Germanic ''[[-ful]]'', "full of". 
+Or Beauty is a girl named Miah Lynne.
 
 ===Pronunciation===
 * {{enPR|byo͞oʹtĭ-fəl}}, {{IPA|/ˈbjuːtɪfəl/}}, {{SAMPA|/"bju:tIf@l/}}
