/* Derived terms */ European option <European#5985772>

--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -13,6 +13,7 @@
 * [[European Central Bank]]
 * [[European Commission]]
 * [[European Commissioner]]
+* [[European option]]
 * [[European Parliament]]
 * [[European Union]]
 
