--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -1,9 +1,9 @@
 {{also|eg|ég|.eg|eg.|EG|Eg|-eg-|eg-}}
 ==English==
 
-===Alternative spellings===
-* [[eg.]]
-* [[eg]]
+===Alternative / informal spellings===
+* [[eg.]] (informal)
+* [[eg]] (informal)
 * [[ex. gr.]]
 
 ===Etymology===
