--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -50,7 +50,7 @@ From {{etyl|ang}} {{term|þunor}}. Compare {{etyl|fa}} {{fa-Arab|[[تندر]]}} 
 * Italian: {{t-|it|tuono|m}}
 * Japanese: {{t+|ja|雷|tr=kaminarí|sc=Jpan}}
 * Korean: [[우레]] (ure)
-* Polish: [[grzmot]] {{m}}
+* Polish: {{t+|pl|grzmot|m}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|trovão|m}}
 * Russian: {{t+|ru|гром|m|tr=grom|sc=Cyrl}}
@@ -70,7 +70,7 @@ From {{etyl|ang}} {{term|þunor}}. Compare {{etyl|fa}} {{fa-Arab|[[تندر]]}} 
 * German: {{t-|de|Donnern|n}}
 * Hungarian: {{t+|hu|dörgés}}
 * Japanese: {{t+|ja|雷鳴|tr=raimei|sc=Jpan}}
-* Polish: [[grzmot]] {{m}}
+* Polish: {{t+|pl|grzmot|m}}
 {{trans-mid}}
 * Russian: {{t+|ru|гром|m|tr=grom|sc=Cyrl}}, {{t+|ru|грохот|m|tr=gróxot|sc=Cyrl}}
 * [[Scottish Gaelic]]: [[tàirneanach]] {{f}}
