--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -350,13 +350,12 @@ from {{etyl|gem}} *{{term||kut-|lang=gem}} (Cf. Norwegian [[kutte]]), or from {{
 * {{ttbc|Catalan}}: [[tallar]]
 * {{ttbc|Croatian}}: [[rezati]]
 * {{ttbc|Dutch}}: [[snijden]], [[afsnijden]], [[knippen]]
+* {{ttbc|Dyirbal}}: [[nudin]], [[gunban]], [[banyin]] ([[Guwal]]); [[jalnggan]], [[bubaman]] ([[Jalnguy]])
 * {{ttbc|Esperanto}}: [[tranĉi]]
 * {{ttbc|French}}: [[couper]]
-* {{ttbc|Guwal}}: [[nudin]], [[gunban]], [[banyin]]
 * {{ttbc|Hungarian}}: [[vág]]
 {{trans-mid}}
 * {{ttbc|Indonesian}}: [[potong]], [[kerat]], [[iris]], [[memotong]]
-* {{ttbc|Jalnguy}}: [[jalnggan]], [[bubaman]]
 * {{ttbc|Romanian}}: [[tăia]], [[croi]]
 * {{ttbc|Serbian}}: [[iseći]] (1,2,3,7,8), [[rez]] (5), [[spustiti]] (6), [[sniziti]] (6), [[pobeći]] (10)
 * {{ttbc|Telugu}}: [[కోయు]] (kOyu) (1,2), [[తెంచు]] (teMchu)(3), [[కోత వేయు]] (kOta vEyu) (6), [[ఖండించుకొను]] (khaMDiMchukonu) (8)
