/* Compounds */ init, 昨年 <昨#6006538>

--- a/en/昨/昨.16976.wikitext
+++ b/en/昨/昨.16976.wikitext
@@ -30,6 +30,11 @@
 ====Readings====
 * {{ja-readings|on=[[さく]] (saku)|kun=[[きのう]] (kinou)}}
 
+====Compounds====
+{{top2}}
+*{{term|昨年||last year|tr=[[さくねん]], [[sakunen]])|lang=ja|sc=Jpan}}
+{{mid2}}
+{{bottom}}
 ----
 
 ==Korean==
