--- a/en/昨/昨.16976.wikitext
+++ b/en/昨/昨.16976.wikitext
@@ -32,7 +32,7 @@
 
 ====Compounds====
 {{top2}}
-*{{term|昨年||last year|tr=[[さくねん]], [[sakunen]])|lang=ja|sc=Jpan}}
+*{{term|昨年||last year|tr=[[さくねん]], [[sakunen]]|lang=ja|sc=Jpan}}
 {{mid2}}
 {{bottom}}
 ----
