/* Synonyms */ [[apogee]] <zenith#6014332>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -30,7 +30,7 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from 
 |passage="There for a while I enjoyed myself in the '''zenith''' of glory and pleasure."}}
 
 ====Synonyms====
-* {{sense|highest point or state}} [[acme]], [[culmination]], [[pinnacle]]
+* {{sense|highest point or state}} [[acme]], [[apogee]], [[culmination]], [[pinnacle]]
 
 ====Antonyms====
 * [[nadir]]
