--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -315,6 +315,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 [[Category:English irregular verbs]]
 
 [[ar:fight]]
+[[ca:fight]]
 [[cs:fight]]
 [[de:fight]]
 [[el:fight]]
