--- a/en/f/fought.6880.wikitext
+++ b/en/f/fought.6880.wikitext
@@ -13,6 +13,7 @@
 [[Category:English irregular past participles]]
 [[Category:English irregular simple past forms]]
 
+[[ca:fought]]
 [[el:fought]]
 [[fr:fought]]
 [[ko:fought]]
