/* Pronunciation */ fix <Germany#6032082>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -3,7 +3,7 @@
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈdʒɜː.mə.nɪ/}}, {{SAMPA|/"dZ3:m@nI/}}
-* {{audio|en-uk-germany.ogg|Audio (UK)}}
+* {{audio|En-uk-Germany.ogg|Audio (UK)}}
 * {{a|US}} {{IPA|/ˈdʒɝ.mə.ni/}}, {{SAMPA|/"dZ3`m@ni/}}
 * {{audio|en-us-Germany.ogg|Audio (US)}}
 
