--- a/en/感/感.15666.wikitext
+++ b/en/感/感.15666.wikitext
@@ -1,6 +1,6 @@
 {{also|惑}}
 ==Translingual==
-
+{{stroke order|strokes=13}}
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=5333<sub>0</sub>|canj=戈口心 (IRP)}}
 
