--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -33,7 +33,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Arabic: {{t+|ar|لعبة|f|sc=Arab}}
 * Armenian: [[խաղ]] (xaġ)
 * [[Catalan]]: [[joc]] {{m}}
-* Croatian: {{t+|hr|igra|f}}
+* Croatian: {{t+|hr|igra|alt=ìgra|f}}
 * Czech: {{t+|cs|hra|f}}
 * Danish: [[leg]], [[spil]]
 * Dutch: {{t+|nl|spel}}
@@ -74,6 +74,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Armenian: [[ներկայացում]] (nerkayac'um)
 * [[Catalan]]: [[obra]] {{f}}
 * Chinese: [[戲劇]], [[戏剧]] (xìjù), [[话剧]] (huàjù)
+* Croatian: {{t|hr|predstava|alt=prèdstava|f}}
 * Czech: {{t+|cs|hra|f}}
 * Danish: [[stykke]], [[spil]]
 * Dutch: {{t+|nl|optreden|n}}, {{t+|nl|schouwspel|n}}, {{t+|nl|toneelstuk|n}}, {{t+|nl|stuk|n}}
