--- a/en/坉/坉.13004.wikitext
+++ b/en/坉/坉.13004.wikitext
@@ -3,9 +3,7 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=4511<sub>7</sub>|canj=土心山 (GPU)}}
 
-# {{defn|Han}}
-
-1. water that does not recede and cannot be diverted (Kangxi)
+#  water that does not recede and cannot be diverted (Kangxi)
 
 ====References====
 * {{Han ref|kx=0225.060|dkj=04923|dj=0459.260|hdz=10422.050|uh=5749|ud=22345|bh=CAAD|bd=51885}}
