/* Danish */ +Etymology, Derived terms, Inflection <felt#6040662>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -86,17 +86,75 @@ See ''[[feel]]''.
 
 ==Danish==
 
-===Noun===
-'''felt''' {{n}}
+===Etymology 1===
 
-# [[field]]
+From {{etyl|gml|da}} {{term|velt|lang=gml}}, from {{proto|Indo-European|pelh₂-|flat|lang=da}}.
 
-====Derived terms====
+Gender changed by influence from {{term|mark|lang=da}}.
+
+====Noun====
+{{da-noun|en|-}}
+
+# [[field]] (the practical part of something)
+
+=====Derived terms=====
+{{rel-top3|Derived terms}}
+* [[feltarbejde]] {{n}}
 * [[feltflaske]] {{c}}
+* [[feltfod]] {{c}}
+* [[feltherre]] {{c}}
+* [[felthær]] {{c}}
+* [[feltkøkken]] {{n}}
+{{rel-mid3}}
+* [[feltlazaret]] {{n}}
+* [[feltmadras]] {{c}}
+* [[feltmarskal]] {{c}}
+* [[feltmæssig]]
+* [[feltpræst]] {{c}}
+* [[feltråb]] {{n}}
+{{rel-mid3}}
 * [[feltseng]] {{c}}
 * [[felttog]] {{n}}
+* [[feltundersøgelse]] {{c}}
+* [[i felten]]
+* [[til felts]]
+{{rel-bottom}}
 
-[[Category:Danish nouns]]
+===Etymology 2===
+
+From {{etyl|de|da}} {{term|Feld|lang=de}}, from {{etyl|goh|da}} {{term|feld|lang=goh}}, from {{proto|Indo-European|pelh₂-|flat|lang=da}}.
+
+====Noun====
+{{da-noun|et|er}}
+
+# [[field]]
+# [[sphere]], [[province]]
+# [[square]]
+
+=====Derived terms=====
+{{rel-top3|Derived terms}}
+* [[centralfelt]] {{n}}
+* [[fodgængerfelt]] {{n}}
+* [[forfelt]] {{n}}
+* [[førerfelt]] {{n}}
+* [[gammafelt]] {{n}}
+* [[gåfelt]] {{n}}
+{{rel-mid3}}
+* [[kraftfelt]] {{n}}
+* [[krydsfelt]] {{n}}
+* [[kulfelt]] {{n}}
+* [[magnetfelt]] {{n}}
+* [[minefelt]] {{n}}
+* [[neksusfelt]] {{n}}
+{{rel-mid3}}
+* [[slutfelt]] {{n}}
+* [[spændingsfelt]] {{n}}
+* [[synsfelt]] {{n}}
+* [[virkefelt]] {{n}}
+{{rel-bottom}}
+
+=====Inflection=====
+{{da-noun-infl|et|er}}
 
 ----
 
