--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -181,6 +181,7 @@ From {{etyl|de|da}} {{term|Feld|lang=de}}, from {{etyl|goh|da}} {{term|feld|lang
 [[ku:felt]]
 [[hu:felt]]
 [[ja:felt]]
+[[no:felt]]
 [[pl:felt]]
 [[pt:felt]]
 [[ru:felt]]
