--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -157,8 +157,8 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Hungarian: {{t+|hu|szilva}}
 * Icelandic: [[plóma]] {{f}}
 * Italian: {{t+|it|prugna|f}}, {{t-|it|susina|f}}
-{{trans-mid}}
 * Japanese: {{t-|ja|セイヨウスモモ|tr=seiyōsumomo|sc=Jpan}}, {{t-|ja|プラム|tr=puramu|sc=Jpan}}
+{{trans-mid}}
 * Korean: {{t-|ko|자두|tr=jadu|sc=Hang}}, {{t-|ko|서양자두|tr=seoyangjadu|sc=Hang}}
 * Latin: {{t-|la|prunum|n|alt=prūnum}}
 * Latvian: [[plūme]] {{f}}
@@ -199,8 +199,8 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Icelandic: [[plómutré]] {{f}}
 * Italian: {{t+|it|prugno|m}}, {{t-|it|susino|m}}
 * Japanese: [[セイヨウスモモ]] (seiyō sumomo)
-{{trans-mid}}
 * Korean: {{t-|ko|자두나무|tr=jadunamu|sc=Hang}}
+{{trans-mid}}
 * Latin: {{t-|la|prunus|f|alt=prūnus}}
 * Latvian: [[plūme]] {{f}}
 * Old English: {{t-|ang|plume|f|alt=plūme|xs=Old English}}
@@ -236,6 +236,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Vietnamese: (noun +) [[chọn lọc]], [[món]] [[bở]]
 {{trans-bottom}}
 
+{{rfc-tsort|unparsed language line: * See  raisin }}
 {{trans-top|raisin}}
 * See [[raisin]]
 {{trans-bottom}}
