/* Translations */ +hy <stab#6052410>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -64,6 +64,7 @@
 ====Translations====
 {{trans-top|To pierce or wound with pointed tool or weapon}}
 * Arabic: {{Arab|[[طعن]]}} (ṭáʕana)
+* Armenian: {{t|hy|խոցել|sc=Armn|tr=xoc'el}}
 * Bosnian: {{t-|bs|bosti}}
 * Chinese: [[朿]] (cì)
 * Croatian: {{t-|hr|bosti}}
