/* Translations */ ja: +template; +gv; +ang; +sga; gd: +template <butter#6056327>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -201,7 +201,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 * Irish: {{t+|ga|im|m|xs=Irish}}
 {{trans-mid}}
 * Italian: {{t+|it|burro|m}}
-* Japanese: [[バター]] (batā)
+* Japanese: {{t|ja|バター|sc=Jpan|tr=batā}}
 * [[Kinyarwanda]]: [[amavuta]]
 * Korean: [[버터]] (beoteo)
 * Kurdish: {{t+|ku|که‌ره‌|sc=KUchar}}
@@ -209,12 +209,15 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 * Latvian: {{t-|lv|sviests|m|xs=Latvian}}
 * Lithuanian: [[sviestas]] {{m}}
 * [[Macedonian]]: [[путер]] {{m}}
+* [[Manx]]: {{t|gv|eeym|f}}
 * Mongolian: {{Cyrl|[[цөцгийн тос]]}} (tsötsgiin tos)
+* Old English: {{t|ang|butere|f}}
+* [[Old Irish]]: {{tø|sga|imb|n}}
 * Polish: {{t+|pl|masło|n}}
 * Portuguese: {{t+|pt|manteiga|f}}
 * Romanian: {{t+|ro|unt|n}}
 * Russian: {{t+|ru|масло|sc=Cyrl}}, {{t+|ru|сливочное масло|n|tr=slívočnoje máslo|sc=Cyrl}}
-* [[Scottish Gaelic]]: [[ìm]] {{m}}
+* [[Scottish Gaelic]]: {{t|gd|ìm|m}}
 * Serbian: [[маслац]] ([[maslac]]) {{m}}
 * Slovak: {{t-|sk|maslo|n}}
 * Slovene: [[maslo]] {{n}}, [[puter]] {{m}} (''colloq.'')
