/* Translations */ + it <count#6057092>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -25,6 +25,7 @@ From {{etyl|fro}} {{term|conter||add up; tell a story|lang=fro}} < {{etyl|la}} {
 * Finnish: {{t+|fi|määrä}}
 {{trans-mid}}
 * German: {{t+|de|Anzahl|g=f}}
+* Italian: {{t+|it|contatore|g=m}}
 * Romanian: [[numărare]] {{f}}
 * Russian: {{t+|ru|счёт|sc=Cyrl}}
 * Slovene: {{t-|sl|rezultat|m}}
