--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -53,6 +53,7 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 * Latin: [[stomachus]] {{m}}
 * [[Lower Sorbian]]: [[žołdk]] {{m}}
 * Maltese: {{t-|mt|stonku|m|xs=Maltese}}
+* Norwegian: {{t|no|mage|m}}
 * Old English: {{t-|ang|maga|m|xs=Old English}}
 * Polish: {{t+|pl|żołądek|m}}
 * Portuguese: {{t+|pt|estômago|m}}
@@ -90,6 +91,7 @@ From {{etyl|grc|en}} {{term|στόμαχος|tr=stomakhos|lang=grc|sc=polytonic}
 * Kurdish:
 *: Sorani: {{t|ku|زگ|tr=zig|sc=KUchar}}, {{t|ku|ورگ|tr=wirg|sc=KUchar}}
 * Maltese: {{t+|mt|żaqq|f|xs=Maltese}}
+* Norwegian: {{t|no|mage|m}}, {{t|no|buk|m}}
 * Portuguese: {{t+|pt|barriga|f}}
 * Russian: {{t+|ru|живот|m|tr=živót|sc=Cyrl}}
 * Spanish: {{t+|es|barriga|f}}, {{t+|es|vientre|m}}
