--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -61,6 +61,7 @@ From {{etyl|fro}} ''[[poulser]]'' (modern ''[[pousser]]''), from {{etyl|la}} ''[
 ====Translations====
 {{trans-top|transitive: apply a force to (an object) so that it moves away}}
 * Arabic: {{Arab|[[دفع]]}} {{IPAchar|(dáfaʕa)}}
+* Armenian: {{t|hy|հրել|sc=Armn|tr=hrel}}
 * Chinese: [[推]] (tuī)
 * Czech: [[tlačit]]
 * Dutch: [[duwen]]
