--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -109,6 +109,7 @@
 * [[Tagalog]]: [[magsalita]]
 * Thai: {{Thai|[[พูด]]}} (pôot)
 * [[Tupinambá]]: [[nhe'eng]]
+* Vietnamese: {{nói}}
 * Yiddish: [[רעדן]] (redn)
 * [[Zulu]]: [[ukukhuluma]] (ugukuluma)
 {{trans-bottom}}
