--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -1,6 +1,8 @@
 {{wikipedia|dab=push}}
 ==English==
 
+==YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT YEAH YOU PUSH IT==
+
 ===Etymology===
 From {{etyl|fro}} ''[[poulser]]'' (modern ''[[pousser]]''), from {{etyl|la}} ''[[pulsare]]''.
 
