iwiki +lt <icon#6077519>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -119,6 +119,7 @@ From {{etyl|la}} '''[[#Latin|icon]]''' < {{etyl|grc}} '''{{polytonic|[[εἰκώ
 [[it:icon]]
 [[kk:icon]]
 [[la:icon]]
+[[lt:icon]]
 [[hu:icon]]
 [[pl:icon]]
 [[ru:icon]]
