combined IPA and SAMPA on one line <blonde#6093483>

--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -55,8 +55,7 @@ In the English language, it is one of only a few distinct words where the gender
 ==French==
 
 ===Pronunciation===
-* {{IPA|lang=fr|/blɔ̃d/}}
-* {{SAMPA|lang=fr|/blO~d/}}
+* {{IPA|lang=fr|/blɔ̃d/}}, {{SAMPA|lang=fr|/blO~d/}}
 
 ===Adjective===
 '''blonde''' {{f}}
