/* Related terms */ <cut#6094086>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -208,7 +208,7 @@ from {{etyl|gem}} *{{term||kut-|lang=gem}} (Cf. Norwegian [[kutte]]), or from {{
 #: ''If you '''cut''' then I'll deal.''
 
 ====Related terms====
-{{rel-top3|Terms related to the verb ''cut''}}
+{{der-top|Terms derived from the verb ''cut''}}
 * [[cut a deal]]
 * [[cut and run]]
 * [[cut down]]
