* before R:Century 1911, * before R:Webster 1913, sorted/rebalanced translations <choose#6099900>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -114,8 +114,8 @@ From {{etyl|ang}} {{term|ceosan|ċēosan|lang=ang}}.
 * Croatian: {{t-|hr|odlučiti}}, {{t|hr|odabrati}}
 * Danish: [[foretrække]], [[have lyst]], [[finde for godt]]
 * Dutch: {{t+|nl|kiezen}}
-{{trans-mid}}
 * Finnish: [[päättää]] [[tehdä]]
+{{trans-mid}}
 * French: {{t+|fr|décider}}
 * Maltese: {{t+|mt|iddeċieda|xs=Maltese}}
 * Portuguese: {{t+|pt|escolher}}
@@ -135,8 +135,8 @@ From {{etyl|ang}} {{term|ceosan|ċēosan|lang=ang}}.
 {{checktrans-bottom}}
 
 ===References===
-{{R:Century 1911}}
-{{R:Webster 1913}}
+* {{R:Century 1911}}
+* {{R:Webster 1913}}
 
 [[Category:English irregular verbs]]
 
