--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -185,7 +185,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Arabic: {{Arab|[[لعب]]}} {{IPAchar|(láʕiba)}}
 * Armenian: {{t-|hy|խաղալ|tr=xaġal|sc=Armn|xs=Armenian}}
 * [[Catalan]]: [[jugar]]
-* Chinese: [[玩]] (wán)
+* Chinese: [[玩]] (wán), [[玩兒]], [[玩儿]] (wánr)
 * Czech: [[hrát]] si
 * Dutch: {{t+|nl|spelen}}
 * Esperanto: {{t-|eo|ludi|xs=Esperanto}}
@@ -196,7 +196,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Hungarian: {{t+|hu|játszik}}
 * Icelandic: {{t+|is|leika}}, {{t+|is|leika sér}}
 * Italian: {{t+|it|giocare}}
-* Japanese: [[遊ぶ]] (asobu)
+* Japanese: [[遊ぶ]] (あそぶ, asobu)
 {{trans-mid}}
 * Korean: [[놀다]] (nolda)
 * Kurdish:
