--- a/en/健/健.11125.wikitext
+++ b/en/健/健.11125.wikitext
@@ -33,6 +33,7 @@
 ====Compounds====
 * [[健康]]
 * [[健全]]
+* {{term|健闘||good fight, strenuous effort|tr=[[けんとう]], [[kentō]]|lang=ja|sc=Jpan}}
 
 ----
 
