/* Translations */ +be, az, os, hy <bridge#6117016>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -58,9 +58,10 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * [[Afrikaans]]: [[brug]]
 * Albanian: {{t-|sq|urë|f|xs=Albanian}}
 * Arabic: {{Arab|[[كوبري]]}} (kúbri)
-* Armenian: [[կամուրջ]] (kamurǰ)
+* Armenian: {{t|hy|կամուրջ|sc=Armn|tr=kamurǰ}}
+* Azeri: {{t|az|körpü}}
 * [[Basque]]: [[zubi]]
-* {{trreq|Belarusian}}
+* Belarusian: {{t|be|мост|tr=most|m}}
 * Bengali: [[পুল]]
 * Bosnian: [[most#Bosnian|most]] {{m}}, [[ćuprija]] {{f}} ''(arch./poetic)''
 * [[Breton]]: [[pont#Breton|pont]] {{m}}, pontoù {{p}}
@@ -116,7 +117,8 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * [[Occitan]]: [[pònt]]
 * Old English: {{t-|ang|brycg|f|xs=Old English}}
 * {{trreq|Oriya}}
-* Persian: {{t-|fa|پل|sc=fa-Arab|xs=Persian}}
+* Ossetic: {{t|os|хид|tr=xid}}
+* Persian: {{t-|fa|پل|sc=fa-Arab|xs=Persian|tr=pol}}
 * Polish: {{t+|pl|most|m}}
 * Portuguese: {{t+|pt|ponte|f}}
 * [[Punjabi]]: [[ਪੁਲ]]
@@ -151,6 +153,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 {{trans-bottom}}
 
 {{trans-top|bony ridge of the nose}}
+* Armenian: {{t|hy|քթարմատ|sc=Armn|tr=k't'armat}}
 * Danish: [[næseben]] {{n}}
 * Finnish: [[nenän selkä]]
 * Italian: [[setto]] nasale {{m}}
@@ -178,6 +181,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 {{trans-bottom}}
 
 {{trans-top|nautical}}
+* Armenian: {{t|hy|նավապետի կամրջակ|sc=Armn|tr=navapeti kamrǰak}}
 * Bosnian: {{t-|bs|kapetanski mostić|m}}
 * Finnish: [[komentosilta]]
 * Hungarian: {{t+|hu|hid|alt=híd}}
