--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -35,7 +35,7 @@
 {{ja-noun|k|hira=むかし|rom=mukashi}}
 
 # the [[past]], [[old]] times
-#* c. 970-984 Utsubo Monogatari (Toshikage)
+#* {{RQ:Utsubo Monogatari|Toshikage}}
 #: '''むかし'''、式部大輔、左大弁かけて清原の王ありけり。
 #* 昔と[[今]] past and the present
 #* 昔の[[自分]] my past self
@@ -52,17 +52,7 @@
 #* 昔[[見る|見た]][[映画]] a movie I once saw
 
 ===References===
-* {{cite book
-  | last = Kōno
-  | first = Tama
-  | title = Nihon Koten Bungaku Taikei 10: Utsubo Monogatari 1
-  | publisher = [[w:Iwanami Shoten Publishing|Iwanami Shoten]]
-  | date = 1959
-  | origyear = c. 970-984
-  | location = [[w:Tokyo|Tōkyō]]
-  | language = Japanese
-  | id = ISBN 4-000-60010-9
-  }}
+* {{R:Utsubo Monogatari 1}}
 
 ----
 
