--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -88,6 +88,7 @@ From {{etyl|la|es}} {{term|liber|lang=la}}
 [[id:libre]]
 [[ie:libre]]
 [[it:libre]]
+[[lo:libre]]
 [[hu:libre]]
 [[no:libre]]
 [[oc:libre]]
