--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -75,6 +75,9 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 
 # [[exemplum#Latin|exemplī]] [[gratia|grātia]] (for example)
 
+----
+<references/>
+
 [[de:e.g.]]
 [[fr:e.g.]]
 [[io:e.g.]]
