--- a/en/倫/倫.11047.wikitext
+++ b/en/倫/倫.11047.wikitext
@@ -1,6 +1,9 @@
 {{also|伦|倫}}
 ==Translingual==
 
+===Etymology===
+{{Han compound|人|侖|c1=s|c2=p|ls=psc}}
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=2822<sub>7</sub>|canj=人人一月 (OOMB)}}
 
